login spacing fix

--- a/client/src/app/(onboarding)/login/login.css
+++ b/client/src/app/(onboarding)/login/login.css
@@ -13,7 +13,6 @@
     background-color: white;
     border: 4px solid #E0E4F2;
     border-radius: 20px; 
-    box-shadow: #6d6d6d 0px 0px 5px;
     justify-content: center;
     align-items: center;
  }
@@ -23,4 +22,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
+ }
+
+ .login-button-links{
+    display: flex;
+    width: 650px;
+    justify-content: space-around;
+ }
+.login-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 225px;
+}
+.spacer{
+    width: 200px;
+}
+ .links{
+    width: 200px;
  }
